# reverse-splitter

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  scratch.py  setup.py
reverse_splitter/: main.py
reverse_splitter/jobs/: add_new_subscribers.py  research.py  scheduler.py  send_newsletter.py  send_welcome.py
reverse_splitter/templates/: newsletter.html  welcome.html
site/: astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.mjs
site/src/components/: Info.astro  header.astro
site/src/content/: reverse-split-description.md
site/src/content/homepage/: reverse-split-description.md
site/src/layouts/: Layout.astro
site/src/pages/: index.astro  unsubscribe.astro
